--- a/src/app/componentes/awards-fines-configuration/awards-fines-configuration.component.html
+++ b/src/app/componentes/awards-fines-configuration/awards-fines-configuration.component.html
@@ -40,5 +40,5 @@
     <div class="text-center"><button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal"
         data-bs-target="#myModal">ALTA</button></div>
 
-        <!-- <app-awards-fine (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-awards-fine> -->
+        <!-- <app-awards-fine-configuration (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-awards-fine-configuration> -->
 </div>
