--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -32,4 +32,5 @@
   </li>
 </ul>
 <app-awards-fine></app-awards-fine>
-<app-awards-fines-configuration></app-awards-fines-configuration>
+<!-- <app-awards-fines-configuration></app-awards-fines-configuration>
+<app-awards-fines-type></app-awards-fines-type> -->
