Modificado los componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <app-header></app-header>
 <!--<router-outlet></router-outlet>-->
 <!--<app-ejemplo></app-ejemplo>
-<app-existing-product></app-existing-product>-->
-<app-profile></app-profile>
+
+<app-profile></app-profile>-->
+<app-existing-product></app-existing-product>
