--- a/src/app/componentes/existing-product/existing-product.component.html
+++ b/src/app/componentes/existing-product/existing-product.component.html
@@ -1,32 +1,77 @@
-<div class="container mt-3">
-  <h1 class="text-center">{{titulo}}</h1>
+<!--<div class="mat-elevation-z8">
+    <h2>Lista de productos</h2>
+    <button type="button" class="btn btn-primary d-md-block me-2 mt-2 mb-2 rounded-0" >Añadir nuevo usuario</button>
+   <input type="text" [(ngModel)]="searchText" (input)="filterData()" placeholder="Buscar por descripción" class="w-100">
 
-  <button type="button" class="btn btn-primary d-md-block me-2 mt-3 mb-3" data-bs-toggle="modal" data-bs-target="#myModal">Añadir nuevo producto</button>
+    <table mat-table [dataSource]="dataSource" class="w-100">
+      <ng-container matColumnDef="image">
+        <th mat-header-cell *matHeaderCellDef> Foto </th>
+        <td mat-cell *matCellDef="let element"><img [src]="getImageSource(element.image)" alt="{{ element.description }}"></td>
+      </ng-container>
+
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Descripción </th>
+        <td mat-cell *matCellDef="let element"> {{ element.description }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef> Precio de venta </th>
+        <td mat-cell *matCellDef="let element"> {{ element.price }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="stock">
+        <th mat-header-cell *matHeaderCellDef> Existencias </th>
+        <td mat-cell *matCellDef="let element"> {{ element.stock }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Acciones </th>
+        <td mat-cell *matCellDef="let element">
+          <a class="p-2" (click)="modificar(element)" data-bs-toggle="modal" data-bs-target="#myModal"><i
+            class="bi bi-pencil-fill"></i>
+          </a>
+          <a class="p-2" (click)="eliminar(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))">
+              <i class="bi bi-trash3-fill"></i>
+          </a>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
+  </div>-->
+
+
+
+<div class="container mt-3">
+  <h1 class="text-center">{{ title }}</h1>
+
+  <button type="button" class="btn btn-primary d-md-block me-2 mt-3 mb-3" (click)="abrirModal('add')">Añadir nuevo producto</button>
 
     <table class="table table-stripped table-bordered w-100">
       <th> Imagen </th>
       <th> Descripción </th>
       <th> Precio de venta </th>
       <th> Existencias </th>
-
+      <th> Acciones </th>
+      
       <tr *ngFor="let element of elements">
-        <td><img src="{{ element.image }}"></td>
+        <td><img [src]="getImage(element.image)" alt="{{ element.description }}"></td>
         <td> {{ element.description }} </td>
         <td> {{ element.price }} </td>
         <td> {{ element.stock }} </td>
 
         <td class="text-center">
-          <a href="#" (click)="modificar(element)" data-bs-toggle="modal" data-bs-target="#myModal"><i
-                  class="bi bi-pencil-fill"></i>
-          </a>
-          <a href="#" (click)="eliminar(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))">
-              <i class="bi bi-trash3-fill"></i>
-          </a>
+          <a (click)="abrirModal('edit', element)"><i class="bi bi-pencil-fill"></i></a>
+          <a (click)="eliminar(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))"><i class="bi bi-trash3-fill"></i></a>
         </td>
       </tr>
     </table>
-    <!--<app-modal-document-types (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-document-types>-->
 
-    <h5 class="text-center">{{mensaje}}</h5>
+    <!--<app-modal-document-types (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-document-types>
+    <h5 class="text-center">{{mensaje}}</h5>-->
+    <app-modal-existing-products #modal></app-modal-existing-products>
   </div>
 
