--- a/src/app/componentes/modal-existing-products/modal-existing-products.component.html
+++ b/src/app/componentes/modal-existing-products/modal-existing-products.component.html
@@ -5,24 +5,47 @@
         <div class="modal-content">
 
             <!-- Modal Header -->
-            <div class="modal-header justify-content-center">
-                <h4 class="modal-title ">ALTA DE TIPO DE DOCUMENTO</h4>
-
+            <div class="modal-header justify-content-left">
+                <h5 class="modal-title ">Productos</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
 
             <!-- Modal body -->
             <div class="modal-body text-center">
-                <!--<label for="descripcion">Descripcion:</label><input type="text" name="descripcion" [(ngModel)]="descripcion" value="{{descripcionPlaceHolder}}"><br>-->
-                <button type="button" class="button" (click)="grabar()">GRABAR</button>
+                <img [src]="getImage(image)" [alt]="description" style="width:250px; height:250px;" class="m-3"><br>
+        
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1">Descripción</span>
+                    <input type="text" class="form-control" aria-label="Descripción" aria-describedby="Descripción" [(ngModel)]="description" [value]="description">
+                </div>
+
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control text-right" aria-label="Euro precio de venta (con coma y dos decimales)" [(ngModel)]="price" [value]="price">
+                    <span class="input-group-text">€</span>
+                    <span class="input-group-text">0,00</span>
+                </div>
+
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1">Existencias</span>
+                    <input type="text" class="form-control" aria-label="Existencias" aria-describedby="Existencias" [(ngModel)]="stock" [value]="stock">
+                </div>
+
+                <div class="mb-3">
+                    <p class="fw-bold h4 d-block" style="color:#424242">Total {{ total }}&euro;</p>
+                </div>
             </div>
+            
             <div class="text-center">
-                <h1 >{{mensaje}}</h1>
-            </div>
-            <!-- Modal footer -->
-            <div class="modal-footer justify-content-center">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="realizarComunicacion()">Cerrar</button>
+                <h1>{{ mensaje }}</h1>
             </div>
 
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <div class="d-grid gap-2 d-md-block">
+                    <button class="btn btn-secondary m-3" type="button" (click)="realizarComunicacion()">Cancelar</button>
+                    <button class="btn btn-primary" type="button" (click)="grabar()">Aceptar</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
