--- a/src/app/componentes/configuration/configuration.component.html
+++ b/src/app/componentes/configuration/configuration.component.html
@@ -9,10 +9,10 @@
         <tr *ngFor="let alarmaStock of alarmados">
             <td class="text-center">{{alarmaStock.stockAlarm}}</td>
             <td class="text-center">
-                <a href="#" (click)="modificar(alarmaStock)" data-bs-toggle="modal" data-bs-target="#myModal" name="nomAccion" tipodeaccion="update"><i
+                <a href="#" (click)="modificar(alarmaStock)" data-bs-toggle="modal" data-bs-target="#myModal"><i
                         class="bi bi-pencil-fill"></i>
                 </a>
-                <a href="#" (click)="eliminar(alarmaStock._links.self.href.substring(alarmaStock._links.self.href.lastIndexOf('/')+1))" name="nomAccion" tipodeaccion="delete">
+                <a href="#" (click)="eliminar(alarmaStock._links.self.href.substring(alarmaStock._links.self.href.lastIndexOf('/')+1))">
                     <i class="bi bi-trash3-fill"></i>
                 </a>
             </td>
