--- a/src/app/operaciones/operaciones.component.html
+++ b/src/app/operaciones/operaciones.component.html
@@ -1,12 +1,12 @@
 <div>
     <h2>Operaciones</h2>
     
-    <label for="monto">Monto:</label>
+    <label for="monto">Importe:</label>
     <input type="number" id="monto" [(ngModel)]="monto" placeholder="Ingrese el monto" />
     
-    <button (click)="realizarDeposito()">Depositar</button>
+    <button (click)="realizarDeposito()">Ingresar</button>
     <button (click)="realizarRetiro()">Retirar</button>
     
-    <p>Ingreso actual: {{ monto }}</p>
+    <p>Última operación: {{ monto }}</p>
     <p>Saldo actual: {{ saldo }}</p>
   </div>
