--- a/src/app/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/hazte-cliente/hazte-cliente.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <form>
-    <div class="row">
+   <!-- <div class="row">
       <div class="col">
         <input type="text" class="form-control" placeholder="Introduce tu Nombre" id="nombre" [(ngModel)]="nombre"
           required>
@@ -14,7 +14,7 @@
         <input type="text" class="form-control" placeholder="Documento de Identidad" id="documentodeidentidad"
           [(ngModel)]="documentodeidentidad" required>
       </div>
-    </div>
+    </div>-->
     <div class="row">
       <div class="col">
         <input type="text" class="form-control" placeholder="Introduce tu Email" id="email" [(ngModel)]="email"
@@ -28,7 +28,7 @@
     <div class="row">
       <div class="col">
       </div>
-      <button (click)="sacarEmail()">comprobar</button>
+      <button (click)="comprobarDatos()">comprobar</button>
     </div>
 
 
