--- a/src/app/componentes/modal-subcategory/modal-subcategory.component.html
+++ b/src/app/componentes/modal-subcategory/modal-subcategory.component.html
@@ -12,7 +12,8 @@
             <div class="modal-body text-center">
                 <label for="descripcion">Subcategoria:</label><input type="text" name="descripcion"
                     [(ngModel)]="descripcion" value="{{subcategoryPlaceHolder}}"><br>
-                    <label for="categoria">Categoria:</label><select [(ngModel)]="categoria">
+                    <label for="categoria">Categoria:</label>
+                    <select [(ngModel)]="categoria">
                         <option value="0">Selecciona categoria...</option>
                         <option *ngFor="let cat of categorias" value="{{cat._links.self.href.substring(cat._links.self.href.lastIndexOf('/')+1)}}">
                             {{cat.description}}
