--- a/src/app/componentes/subcategory/subcategory.component.html
+++ b/src/app/componentes/subcategory/subcategory.component.html
@@ -4,7 +4,7 @@
     <table class="table table-stripped table-bordered">
         <tr>
             <th class="text-center">DESCRIPCION</th>
-            <th class="text-center">SUBCATEGORIAS</th>           
+            <th class="text-center">ACIONES</th>           
         </tr>
         <tr *ngFor="let subcategory of subcategories">
             <td class="text-center">{{subcategory.description}}</td>
