Category y subcategory completados

--- a/src/app/componentes/modal-category/modal-category.component.html
+++ b/src/app/componentes/modal-category/modal-category.component.html
@@ -1,10 +1,10 @@
-<div class="modal" id="myModal">
+<div class="modal fade" id="myModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
 
             <!-- Modal Header -->
             <div class="modal-header justify-content-center"> 
-                <h4 class="modal-title ">ALTA DE TIPO DE CATEGORIA</h4>
+                <h4 class="modal-title ">{{subtitulo}} TIPO DE CATEGORIA</h4>
 
             </div>
 
