--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -10,11 +10,10 @@
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">Categorias</a> 
+        aria-expanded="false" routerLink="categorias">Categorias</a> 
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="AltaCategoria">Alta Categoria</a></li>
-        <li><a class="dropdown-item" href="BajaCategoria">Baja Categoria</a></li>
-        <li><a class="dropdown-item" href="ModificarCategoria">Modificar Categoria</a></li>
+        <li><a class="dropdown-item" routerLink="categorias">categorias</a></li>
+       
       </ul>
     </li>
     <li class="nav-item dropdown">
@@ -42,6 +41,6 @@
       <a class="nav-link active bg-dark text-white" href="Fidelidad">Fidelidad</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active bg-dark text-white" href="Configuración">Configuración</a>
+      <a class="nav-link active bg-dark text-white" routerLink="conf">Configuración</a>
     </li>
 
