--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,15 +22,16 @@
       </button>
 
       <ul class="dropdown-menu" role="menu">
-        <li><a href="#">Cuenta #1</a></li>
-        <li><a href="#">Cuenta #2</a></li>
-        <li><a href="#">Cuenta #3</a></li>
+        <li><a href="#">Cuenta 1</a></li>
+        <li><a href="#">Cuenta 2</a></li>
+        <li><a href="#">Cuenta 3</a></li>
         <li class="divider"></li>
-        <li><a href="#">Cuenta #4</a></li>
+        <li><a href="#">Cuenta 4</a></li>
       </ul>
     </div>
   </li>
 </ul>
+
 <app-awards-fine></app-awards-fine>
 <!-- <app-awards-fines-configuration></app-awards-fines-configuration>
 <app-awards-fines-type></app-awards-fines-type> -->
