--- a/src/app/componentes/user/user.component.html
+++ b/src/app/componentes/user/user.component.html
@@ -10,11 +10,11 @@
             <th class="text-center">ROL</th>
             <th class="text-center">ACCIONES</th>
         </tr>
-        <tr *ngFor="let usuario of usuarios">
+        <tr *ngFor="let usuario of usuarios, let clave of claves, let habilitado of habilitados, let rol of roles">
             <td class="text-center">{{usuario.user}}</td>
-            <!--<td class="text-center">{{clave.password}}</td>
+            <td class="text-center">{{clave.password}}</td>
             <td class="text-center">{{habilitado.enabled}}</td>
-            <td class="text-center">{{rol.user}}</td>-->
+            <td class="text-center">{{rol.rol}}</td>
             <td class="text-center">
                 <a href="#" (click)="modificar(usuario)" data-bs-toggle="modal" data-bs-target="#myModal"> 
                     <i class="bi bi-pencil-fill"></i> </a>
