--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div>
+ <div>
     <footer class="py-1 text-bg-dark ">
 
         <div class="col-md-5 offset-md-6 ">
@@ -17,7 +17,7 @@
         </div>
 
     </footer>
-</div>
+</div> 
 <!-- <footer>
     <mat-toolbar color="primary">
       <span>© {{ currentYear }} Mi Sitio Web</span>
@@ -28,3 +28,20 @@
       <a mat-button href="https://springboot.com">Spring Boot</a>
     </mat-toolbar>
   </footer> -->
+
+    <!-- <footer class="py-3 my-4 ">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item">
+                <a href="#" class="nav-link px-2 text-body-secondary">...</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link px-2 text-body-secondary">...</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link px-2 text-body-secondary">....</a>
+            </li>
+
+
+        </ul>
+        <p class="text-center text-body-secondary">© 2023 PortalentoDigital, Inc</p>
+    </footer> -->
