--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,5 +1,5 @@
-<div>
-    <footer class="py-1 text-bg-dark ">
+
+    <footer class="py-1 text-bg-dark fixed-bottom position-absolute">
 
          <div class="col-md-5 offset-md-6 ">
             <form>
@@ -19,7 +19,7 @@
         </div> 
 
     </footer>
-</div>
+
 <!-- <footer>
     <mat-toolbar color="primary">
       <span>© {{ currentYear }} Mi Sitio Web</span>
