--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <app-header></app-header>
 <router-outlet></router-outlet>
+<app-imagen></app-imagen>
 <app-footer></app-footer>
-<app-subcategory></app-subcategory>
+
