--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,4 +1,4 @@
- <div>
+<!-- <div>
     <footer class="py-1 text-bg-dark ">
 
         <div class="col-md-5 offset-md-6 ">
@@ -17,25 +17,16 @@
         </div>
 
     </footer>
-</div> 
-<!-- <footer>
-    <mat-toolbar color="primary">
-      <span>© {{ currentYear }} Mi Sitio Web</span>
-      <span class="fill-remaining-space"></span>
-      <a mat-button href="https://miweb.com">Inicio</a>
-      <a mat-button href="https://miweb.com/acerca">Acerca de</a>
-      <a mat-button href="https://miweb.com/contacto">Contacto</a>
-      <a mat-button href="https://springboot.com">Spring Boot</a>
-    </mat-toolbar>
-  </footer> -->
+</div>  -->
 
-    <!-- <footer class="py-3 my-4 ">
+
+<!-- <footer class="py-3 my-4 ">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-body-secondary">...</a>
+                <a href="#" class="nav-link px-2 text-body-secondary">pastas</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-body-secondary">...</a>
+                <a href="#" class="nav-link px-2 text-body-secondary">quesos</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link px-2 text-body-secondary">....</a>
@@ -45,3 +36,53 @@
         </ul>
         <p class="text-center text-body-secondary">© 2023 PortalentoDigital, Inc</p>
     </footer> -->
+
+<div class="container-fluid ">
+    <div class="row p-3 pb-1 bg-dark text-white">
+        <div class="col-xs-12 col-md-6 col-lg-3">
+            <p class="h3"> <strong><em>ALLA PUTTANESCA</em></strong></p>
+            <p>Madrid, Lavapies</p>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-3">
+            <p class="h6 mb-2">PRODUCTOS</p>
+
+            <div class="mb-1">
+                <a class="text-secondary text-decoration-none" href="https://pastaio.com">Pastas</a>
+            </div>
+            <div class="mb-1">
+                <a class="text-secondary text-decoration-none" href="https://quesoss.com/italianos/">Quesos</a>
+            </div>
+            <div class="mb-1">
+                <a class="text-secondary text-decoration-none"
+                    href="https://www.laumont.es/products/trufa-blanca-tuber-magnatum">Trufas</a>
+            </div>
+            <div class="mb-1">
+                <a class="text-secondary text-decoration-none"
+                    href="https://www.vilaviniteca.es/content/vega_sicilia">Vinos</a>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-md-6 col-lg-3">
+            <p class="h6 mb-2">Links</p>
+            <div class="mb-1">
+                <a class="text-secondary text-decoration-none" href="#">Terminos y Condiciones</a>
+            </div>
+            <div class="mb-1">
+                <a class="text-secondary text-decoration-none" href="#">Politica de Privacidad</a>
+            </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-3">
+            <p class="h6 mb-2">Contacto</p>
+            <div class="mb-1">
+                <a class="text-secondary text-decoration-none" href="https://www.Instagram.com">Instagram</a>
+            </div>
+            <div class="mb-1">
+                <a class="text-secondary text-decoration-none" href="https://www.Facebook.com">Facebook</a>
+            </div>
+        </div>
+        <div class="col-xs-12 pt-3">
+            <p class="text-white text-center">Copyright © -<em>Portalento-Digital</em> 2023</p>
+        </div>
+
+    </div>
+</div>
