Llamada al listado de movimientos de la base de datos y creación de beans de Description y de CurrentAccount

--- a/src/app/movimientos/movimientos.component.html
+++ b/src/app/movimientos/movimientos.component.html
@@ -6,20 +6,10 @@
       <th>Concepto</th>
       <th>Importe</th>
     </tr>
-    <tr>
-      <td>01/06/2023</td>
-      <td>Comida</td>
-      <td>$20.00</td>
-    </tr>
-    <tr>
-      <td>05/06/2023</td>
-      <td>Transporte</td>
-      <td>$10.50</td>
-    </tr>
-    <tr>
-      <td>10/06/2023</td>
-      <td>Ropa</td>
-      <td>$50.00</td>
+    <tr *ngFor="let operacion of operaciones">
+      <td>{{ operacion.date }}</td>
+      <td>{{ operacion.description }}</td>
+      <td>{{ operacion.current }}</td>
     </tr>
   </table>
 </div>
