--- a/src/app/componentes/existing-product/existing-product.component.html
+++ b/src/app/componentes/existing-product/existing-product.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div class="container mt-3 p-3">
   <h1 class="text-center mb-5">{{ title }}</h1>
     <table class="table table-stripped table-bordered w-100">
       <th> Imagen </th>
@@ -13,8 +13,8 @@
         <td> {{ element.price }} </td>
         <td> {{ element.stock }} </td>
 
-        <td class="text-center">
-          <a (click)="abrirModal('edit', element)"><i class="bi bi-pencil-fill"></i></a>
+        <td>
+          <a (click)="abrirModal(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1), 'edit', element)"><i class="bi bi-pencil-fill"></i></a>
           <a (click)="eliminar(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))"><i class="bi bi-trash3-fill"></i></a>
         </td>
       </tr>
@@ -25,7 +25,7 @@
     <!--<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label=""></mat-paginator>-->
 
     <div class="w-100 text-center">
-      <button type="button" class="btn btn-primary" (click)="abrirModal('add')">Añadir nuevo producto</button>
+      <button type="button" class="btn btn-primary" (click)="abrirModal('','add')">Añadir nuevo producto</button>
     </div>
     <app-modal-existing-products #modal></app-modal-existing-products>
   </div>
