--- a/src/app/componentes/modal-existing-products/modal-existing-products.component.html
+++ b/src/app/componentes/modal-existing-products/modal-existing-products.component.html
@@ -12,8 +12,14 @@
 
             <!-- Modal body -->
             <div class="modal-body text-center">
-                <img [src]="getImage(image)" [alt]="description" style="width:250px; height:250px;" class="mb-3"><br>
+                <div class="mb-3">
 
+                  <img [src]="getImage(image)" [alt]="description" style="width:250px; height:250px;" class="mb-3" id="setImage"><br>
+                  <!--<button (click)="fileUpload()" class="text-primary text-decoration-none btn btn-link">Editar imagen</button>-->
+
+                  <label for="file-input" class="text-primary text-decoration-none btn btn-link">Editar imagen</label>
+                  <input type="file" (change)="fileUpload($event)" style="display: none;" id="file-input" accept=".jpg, .png">
+                </div>
                 <div class="input-group mb-2">
                     <span class="input-group-text" style="width:135px" id="basic-addon1">Descripción</span>
                     <input type="text" class="form-control" aria-label="Descripción" aria-describedby="Descripción" [(ngModel)]="description" [value]="description">
@@ -36,14 +42,14 @@
             </div>
 
             <div class="text-center">
-                <h1>{{ mensaje }}</h1>
+                <h1>{{ message }}</h1>
             </div>
 
             <!-- Modal footer -->
             <div class="modal-footer">
                 <div class="d-grid gap-2 d-md-block">
-                    <button class="btn btn-secondary m-3" type="button" (click)="realizarComunicacion()">Cancelar</button>
-                    <button class="btn btn-primary" type="button" (click)="grabar()">Aceptar</button>
+                    <button class="btn btn-secondary m-3" type="button" (click)="close()">Cancelar</button>
+                    <button class="btn btn-primary" type="button" (click)="saveData(id)">Aceptar</button>
                 </div>
             </div>
         </div>
