--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-    <footer class="py-1 text-bg-dark fixed-bottom position-absolute">
+    <footer class="py-1 text-bg-dark fixed-bottom">
 
          <div class="col-md-5 offset-md-6 ">
             <form>
