--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 
 <app-header></app-header>
 <router-outlet></router-outlet>
-<app-subcategory class = "position-static"></app-subcategory>
-<app-footer class ="position-relative fixed-bottom"></app-footer>
+<app-footer></app-footer>
